# neoncore

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: test.yml
benchmarks/: benchmark_results.txt  plot.py  vector_benchmark.cpp
include/neoncore/: neoncore.h  vector_ops.h
src/: neoncore.cpp  vector_ops.cpp
tests/: test_neoncore.cpp
